change scripts