@@ -1,6 +1,10 @@
 #!/bin/bash
-echo "Service Solver"
-export JAVA_OPTS="-Xmx10G"
-#java -jar ./build/libs/solver_nn-1.0.1.jar -Xmx10G --server.port=5550 --spring.profiles.active=prod
-./gradlew bootRun --args='--server.port=5550 --spring.profiles.active=prod'
+echo "API Service"
+#BASE_PATH="./build/libs/"
+BASE_PATH=./app/
+APP_NAME=co_share_api
+#APP_ARGS="-Xmx1524m -XX:MaxPermSize=256m -Xss2048k --spring.profiles.active=prod"
+APP_ARGS=--spring.profiles.active=prod
+java -jar  $BASE_PATH$APP_NAME.jar $APP_ARGS
+#./gradlew bootRun --args='--server.port=49888'
 exit 0
